--- a/index.html
+++ b/index.html
@@ -509,6 +509,7 @@
 		const modal = document.getElementById("myModal");
 		const openModalBtn = document.getElementById("openModalBtn");
 		const closeBtn = document.getElementsByClassName("close")[0];
+		const sendBtn = document.getElementsByClassName("send")[0];
 
 		// Открываем модальное окно при клике на кнопку
 		openModalBtn.onclick = function () {
@@ -517,6 +518,11 @@
 
 		// Закрываем модальное окно при клике на "x"
 		closeBtn.onclick = function () {
+			modal.style.display = "none";
+		}
+
+		// Закрываем модальное окно при клике на "x"
+		sendBtn.onclick = function () {
 			modal.style.display = "none";
 		}
 
